--- a/pyama-frontend/package.json
+++ b/pyama-frontend/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "bun next dev -H 0.0.0.0",
+    "build": "bun next build",
+    "start": "bun next start",
+    "lint": "bun eslint",
+    "lint:fix": "bun eslint --fix",
+    "format": "bun prettier --write .",
+    "format:check": "bun prettier --check .",
+    "type-check": "bun tsc --noEmit",
+    "clean": "rm -rf .next out"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -31,6 +36,7 @@
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
