--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,12 @@ build:
 
 sphinx:
   configuration: docs/conf.py
+  fail_on_warning: false
 
 python:
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
