--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,4 @@ pyama-qt = { workspace = true }
 
 [dependency-groups]
 dev = ["ty", "ruff", "pyinstaller", "ipykernel"]
+docs = ["sphinx>=7.0", "myst-parser>=2.0", "sphinx-rtd-theme>=2.0", "sphinx-copybutton"]
