--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ members = [
 [tool.uv.sources]
 pyama-core = { workspace = true }
 pyama-qt = { workspace = true }
+# Note: btrack 0.6.x (required for tracking) conflicts with pyama-fastapi due to pydantic version requirements
+# btrack requires pydantic<2.0, pyama-fastapi requires pydantic>=2.0
 
 [dependency-groups]
 dev = ["ty", "ruff", "pyinstaller", "ipykernel"]
