--- a/pyama-core/pyproject.toml
+++ b/pyama-core/pyproject.toml
@@ -19,10 +19,12 @@ dependencies = [
     "typer",
     "tqdm",
     "cellpose",
-    "btrack",
     "pytest",
     "matplotlib",
     "spotiflow",
+    "btrack",  # Note: btrack 0.7.0 has known bugs with 2D tracking (Eigen assertion crashes in C library)
+    # If crashes occur, use IoU tracking instead (set tracking_method: iou in config)
+    # Downgrading to btrack 0.6.x is not possible due to pydantic version conflicts with other dependencies
 ]
 
 [tool.uv]
