--- a/pyama-preact/package.json
+++ b/pyama-preact/package.json
@@ -12,8 +12,12 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-preact": "^0.563.0",
     "preact": "^10.27.2",
-    "preact-router": "^4.1.2"
+    "preact-router": "^4.1.2",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
